--- a/shopping-cart/package.json
+++ b/shopping-cart/package.json
@@ -2,6 +2,7 @@
   "name": "shopping-cart",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://syfq-isml.github.io/odin-shopping-cart",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
